--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="id" id="html" class="">
+<html lang="id" id="html" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
